--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "debug": "^4.1.1",
     "eslint": "^3.9.1",
     "eslint-plugin-es5": "^1.4.1",
+    "eslint-plugin-my-eslint-rules": "./my-eslint-rules",
     "mocha": "^3.1.2"
   },
   "engines": {
